--- a/WebApp/Application/config/variables.py.example
+++ b/WebApp/Application/config/variables.py.example
@@ -1,11 +1,11 @@
 # Global & Security
 DB_BASE = 'boilerplate'
-SECRET_KEY = 'a'
-SECURITY_PASSWORD_SALT = 'a'
+SECRET_KEY = ''
+SECURITY_PASSWORD_SALT = ''
 
 # Production Specific
 SENTRY_DSN = ''
-PRODUCTION_DB_DRIVER = ''
+PRODUCTION_DB_DRIVER = 'mysql'
 PRODUCTION_DB_USER = ''
 PRODUCTION_DB_PASSWORD = ''
 PRODUCTION_DB_DATABASE = ''
@@ -19,7 +19,7 @@ MAIL_PASSWORD = ''
 
 # Babel Configuration
 BABEL_DEFAULT_LOCALE = 'en'
-BABEL_DEFAULT_TIMEZONE = 'UTC'
+BABEL_DEFAULT_TIMEZONE = 'AEST'
 
 
 
