Remove Variables file from boilerplate so one actually gets re-generated on first run (make configure)

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ WebApp/Application/datastore.db
 WebApp/.venv/*
 WebApp/bower_components/*
 WebApp/Application/static/uploads/*
+WebApp/Application/config/variables.py
