Makefile for the previous

--- a/WebApp/Makefile
+++ b/WebApp/Makefile
@@ -16,6 +16,10 @@ all: debug
 debug: venv regenerate db configure
 	. $(VENV_ACTIVATE); python $(RUN_SCRIPT) $(ARGS) --debug
 
+# Build target that does not require a configured app to run.
+boilerplate: venv regenerate db
+	. $(VENV_ACTIVATE); python $(RUN_SCRIPT) $(ARGS) --debug
+
 test: venv regenerate db
 	. $(VENV_ACTIVATE); python $(RUN_TEST_SCRIPT)
 
@@ -35,23 +39,24 @@ regenerate:
 uninstall: clean
 	rm -rf $(VENV_LOCATION)
 
-reconfigure: 
+reconfigure:
 	. $(VENV_ACTIVATE); ./util/configure
-	touch $(VENV_LOCATION)/.configure
-
+	touch WebApp/Application/config/.configured
 
 
 # A little bit of hack
-configure:  venv $(VENV_LOCATION)/.configure
-$(VENV_LOCATION)/.configure:	
+configure:  venv WebApp/Application/config/.configured
+WebApp/Application/config/.configured:
 	. $(VENV_ACTIVATE); ./util/configure
-	touch $(VENV_LOCATION)/.configure
+	touch WebApp/Application/config/.configured
+
 
 db: venv $(VENV_LOCATION)/.db
 $(VENV_LOCATION)/.db:
 	if [ "$(CONFIG_TYPE)" = "MySQLStd" ]; then echo "CREATE DATABASE IF NOT EXISTS $(DB_DATABASE);" | mysql -u $(DB_USER); fi
 	if [ "$(CONFIG_TYPE)" = "CI" ]; then echo "CREATE DATABASE IF NOT EXISTS $(DB_DATABASE);" | mysql -u $(DB_USER); fi
 	touch $(VENV_LOCATION)/.db
+
 
 venv: $(VENV_LOCATION)
 $(VENV_LOCATION): requirements.txt
