--- a/Flask-Boilerplate/Makefile
+++ b/Flask-Boilerplate/Makefile
@@ -14,7 +14,7 @@ REQUIREMENTS="requirements.txt"
 all: debug
 
 debug: venv regenerate db
-	. $(VENV_ACTIVATE); python $(RUN_SCRIPT) $(ARGS) --debug
+	. $(VENV_ACTIVATE); python $(RUN_SCRIPT) server $(ARGS) --debug 
 
 # Build target that does not require a configured app to run.
 boilerplate: venv regenerate db
