Correct nginx config

--- a/Deploy/nginx.conf
+++ b/Deploy/nginx.conf
@@ -10,11 +10,11 @@ server {
         proxy_set_header X-Scheme $scheme;
     }
 
-    location ^~ /static/  {
-        root /deploy/appliance/com.mycompany.myapp/Application/static/;
+    location /static/  {
+        alias /deploy/appliance/com.mycompany.myapp/Application/static/;
     }
 
     location = /favicon.ico  {
-        root /deploy/appliance/com.mycompany.myapp/Application/static/favicon.ico;
+        alias /deploy/appliance/com.mycompany.myapp/Application/static/favicon.ico;
     }
 }
