--- a/Deploy/supervisor.conf
+++ b/Deploy/supervisor.conf
@@ -1,5 +1,5 @@
 [program:com.mycompany.myapp]
-command=python3.4 run.py meinheld
+command=python3.4 run.py meinheld --hostname 127.0.0.1 --port 8000
 directory=/deploy/appliance/com.mycompany.myapp/
 autostart=true
 autorestart=true
