--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ if [ -e '.env' ]; then
     MINOR=`cat .buildutils_version | cut -d"." -f 2`
     BUILD=`cat .buildutils_version | cut -d"." -f 3`
 
-    if [ $MAJOR -ne 0 ] || [ $MINOR -ne 2 ]; then
+    if [ \( $MAJOR -ne 0 \) -o \( $MINOR -ne 2 \) ]; then
         echo "An out of date version of flask-boilerplate-buildutils was detected. Upgrading.";
         pip3 install "flask-boilerplate-buildutils<$MAX_BUILDUTILS,>=$MIN_BUILDUTILS" --upgrade;
         pip3 show flask-boilerplate-buildutils | grep Version | sed 's/Version: //' > .buildutils_version;
