Attempt  to fix the env script

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ if [ -e '.env' ]; then
         if ! pip3 freeze | grep flask-boilerplate-buildutils > /dev/null; then
             pip3 install "flask-boilerplate-buildutils<$MAX_BUILDUTILS,>=$MIN_BUILDUTILS" --upgrade;
         fi
-        pip3 show flask-boilerplate-buildutils | grep Version | sed 's/^Version: //' > .buildutils_version;
+        pip3 show flask-boilerplate-buildutils | grep ^Version | sed 's/Version: //' > .buildutils_version;
     fi
 
     MAJOR=`cat .buildutils_version | cut -d"." -f 1`
